--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/pdf/icons8-r-cute-16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reaksmey</title>
+    <title>My Profile</title>
 <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">-->
 <!--    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
