--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/pdf/icons8-r-cute-16.png">
+    <link rel="icon" href="/pdf/weblogo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile</title>
 <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">-->
